Correcting the overlapping elements

--- a/style.css
+++ b/style.css
@@ -50,8 +50,6 @@ header img {
   margin: 20px auto 32px;
 }
 
-
-
 form::before {
   content: '';
   width: 750px;
@@ -60,7 +58,7 @@ form::before {
   position: absolute;
   z-index: 1;
   border-radius: 20px 20px 0px 0px;
-  padding: 0;
+  margin-left: -64px;
 }
 
 form {
@@ -75,15 +73,17 @@ form {
 }
 
 #title {
-  margin: 50px auto 80px;
-  
+  margin: 50px 275px;
+  position: absolute;
+  z-index: 2;
+  color: #FFFFFF;
 }
 
 fieldset {
   border-style: none;
 }
 
-.fieldset-wrapper legend {
+legend {
   font-weight: 400;
   font-size: 24px;
   line-height: 34px;
@@ -166,6 +166,7 @@ fieldset {
 .fieldset-wrapper .col-2 {
   display: flex;
   gap: 22px;
+  margin-top: 163px;
 }
 
 .col-2 > div:nth-child(1) {
